using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace ElectronicPrescription.DTOs
{
    public class PackageLeafletDTO
    {
        public int PackageLeafletId { get; set; }

        public String Description { get; set; }
    }
}
