using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace ElectronicPrescription.DTOs
{
    public class MedicineDTO
    {
        public int MedicineId { get; set; }

        public String Name { get; set; }
    }
}
