@startuml "dm_it2_global"

' ### [ITERAÇÃO 1] ###
package "Iteração 1" <<cloud>> {
    package "Medicine BackOffice" #009FBD {

        class Medicine {
            Name
        }
        class Drug {
            Name
        }
        class Presentation {
            Form
            Concentration
            Quantity
        }
        class Posology {
            Quantity
            Technique
            Interval
            Period
        }
        class PackageLeaflet {
            Description
        }
    }
}

' ### [ITERAÇÃO 2] ###
package "Iteração 2" <<cloud>> {
    package "Receipts BackOffice" #43CC72 {

        class User {
            name
            email
            password
        }
        enum Role {
            Physician
            Patient
            Pharmacist
            Admin
        }
        class Prescription {
            ExpirationDate
            Quantity
        }
        class MedicalReceipt {
            creationDate
        }
        class PrescribedPosology
        class Fill {
            date
            quantity
        }
    }
}

' ### [NOTES] ###

' ### [RELATIONS] ###
MedicalReceipt "*" --> "1" User : physcian
MedicalReceipt "*" --> "1" User : patient
User "*" -> "*" Role
MedicalReceipt "1" -> "*" Prescription
Prescription "*" --> "1" Presentation
Medicine "*" - "1" Drug
Drug "1" -- "*" Presentation
Prescription "*" -> "0,1" Medicine
note on link: optional

Prescription "1" --> "*" Fill
Prescription "*" --> "1" PrescribedPosology
Presentation "1" - "*" PackageLeaflet
PackageLeaflet "*" --> "1" Posology
PrescribedPosology "1" --> "0,1" Posology
note on link : If same as generic

@enduml